# skysim

./: .gitignore  .rtd-environment.yml  .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py
docs/: api.rst  conf.py  index.rst  installation.rst
docs/skysim/: index.rst
licenses/: LICENSE.rst
skysim/: __init__.py  airglow.py  eso.py  transmission.py  zodiacal.py
skysim/data/: README.rst  atmosphere.fits  solarflux.ecsv  solarspec.fits
skysim/scripts/: __init__.py  prepare_data.py
skysim/tests/: coveragerc  test_airglow.py  test_transmission.py  test_zodiacal.py
skysim/utils/: convert.py  data.py  eso.py  grid.py  meta.py  resample.py
skysim/utils/tests/: test_convert.py  test_data.py  test_grid.py  test_meta.py  test_resample.py
